# modelado_y_simulacion_de_sistemas_complejos

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
computational_models/: condensation.ipynb  pyproject.toml  real_state_market.ipynb  schelling.ipynb
computational_models/computational_models/core/: equilibrium_criterion.py  experiment.py  neighborhood.py  runner.py
computational_models/computational_models/models/: abstract.py  condensation.py  real_state_market.py  schelling.py
computational_models/computational_models/plotters/: animated_lattice.py  final_grid.py  numerical_series.py
computational_models/src/core/: runner.py
computational_models/src/models/abstract/: model.py
computational_models/src/models/condensation/: model.py
computational_models/src/models/game_of_life/: model.py
computational_models/src/models/real_state_market/: agent.py  model.py
computational_models/src/models/schelling/: model.py
computational_models/src/plotters/: animated_lattice.py  final_grid.py  numerical_series.py
computational_models/tests/core/: test_equilibrium_criterion.py  test_experiment.py  test_neighborhood.py  test_runner.py
docs/: abstract.md  computational.md  simulation.md
notebooks/: condensation.ipynb  real_state_market.ipynb  schelling.ipynb
notebooks/computational/: condensation.ipynb  real_state_market.ipynb  schelling.ipynb
notebooks/product_space/: dynamic_product_space.ipynb
src/models/abstract/: model.py
src/models/final_practice_work/: consumer.py  market.py  producer.py
src/simulation/core/: neighborhood.py  (+1 more)
(+11 files in other folders)
